create managed server and less notify